2001-01-05  John Harper  <jsh@eazel.com>

	* version 0.35

2001-01-05  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/shading.jl (shading-add-window): don't need
	to call shade-window, just set hide-client property when
	necessary

2001-01-04  John Harper  <jsh@eazel.com>

	* sawfish/wm/workspace.jl: don't include hide-client in the
	call to add-swapped-properties

	* sawfish/wm/state/shading.jl (shading-after-swap-in): added to
	the after-workspace-swap-in-hook, updates the hide-client
	property to match the shaded property and reframes the window
	if necessary

	* sawfish/wm/swapper.jl (workspace-swap-in): before exiting,
	run after-workspace-swap-in-hook with two args (W SPACE)

	[ Last three changes fix bug 5179 (shaded state is fixed for
	all workspaces) ]

	* sawfish/wm/state/transient.jl (focus-windows-when-mapped):
	defaults to t; changed doc string to reflect the earlier change
	in semantics

	* sawfish/wm/placement.jl (place-window-mode): set to
	`top-left' by default now

	* sawfish/wm/placement/top-left.jl (windows-around): ignore
	windows that have yet to be placed

	* sawfish/wm/focus.jl (focus-click): before exiting, reinstall
	the click-to-focus-map if the window isn't actually focused

2001-01-03  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/transient.jl (transient-map-window): altered
	semantics of focus-windows-when-mapped option to only apply to
	non-transient windows (or transient windows whose parent is the
	root window)

	* sawfish/wm/user.jl: load sawfish.wm.state.wm-spec by default
	(instead of only if KDE2 is being used)

2000-12-31  John Harper  <jsh@eazel.com>

	* sawfish/wm/windows.jl (window-supports-wm-protocol-p): new
	function, saves consing up a list just to call memq on it
	(delete-window-safely): use the new function

	* sawfish/wm/util/ping.jl (window-supports-ping-p): use
	window-supports-wm-protocol-p

	* sawfish/wm/util/stacking.jl (maybe-raise-window,
	maybe-lower-window): new functions. These introduce two new