@@ -1,3 +1,10 @@
+2001-01-06  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/commands/groups.jl (delete-group): new command
+
+	* sawfish/wm/keymaps.jl (close-button-keymap): bind
+	`delete-group' to `S-Button1-Off'
+
 2001-01-05  John Harper  <jsh@eazel.com>
 
 	* version 0.35
